--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <nav class="nav">
             <div class="container1">
                 <div class="logo">
-                    <a href="index.html">SD&éM</a>
+                    <a href="index.html" style="color: rgb(197, 197, 197)">SD&éM</a>
                 </div>
                 <div id="mainListDiv" class="main_list">
                     <ul class="navlinks">
                         <li><a href="trains.html">TRAINS</a></li>
                         <li><a href="drugs.html">DRUGS</a></li>
                         <li><a href="music.html">MUSIC</a></li>
-                        <li><a href="more.html">MORE</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <span class="navTrigger">
