--- a/music.html
+++ b/music.html
@@ -23,7 +23,7 @@
                         <li><a href="trains.html">TRAINS</a></li>
                         <li><a href="drugs.html">DRUGS</a></li>
                         <li><a href="music.html"  style="color:  rgb(197, 197, 197)">MUSIC</a></li>
-                        <li><a href="more.html">MORE</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <span class="navTrigger">
