--- a/trains.html
+++ b/trains.html
@@ -22,7 +22,7 @@
                         <li><a href="trains.html"  style="color: rgb(197, 197, 197)">TRAINS</a></li>
                         <li><a href="drugs.html">DRUGS</a></li>
                         <li><a href="music.html">MUSIC</a></li>
-                        <li><a href="more.html">MORE</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <span class="navTrigger">
