--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,14 @@
         <nav class="nav">
             <div class="container1">
                 <div class="logo">
-                <a href="index.html">BRAND</a>
+                <a href="index.html">SD$eM</a>
                 </div>
                 <div id="mainListDiv" class="main_list">
                     <ul class="navlinks">
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="profile.html">PROFILE</a></li>
                         <li><a href="gallery.html">GALLERY</a></li>
-                        <li><a href="contact.html"  style="color: rgb(197, 197, 197)">CONTACT</a></li>
+                        <li><a href="contact.html" style="color: rgb(197, 197, 197)">CONTACT</a></li>
                     </ul>
                 </div>
                 <span class="navTrigger">
