--- a/trains.html
+++ b/trains.html
@@ -40,7 +40,7 @@
         </section>
         <!--  GRID SECTION -->
         <!-- Images used to open the lightbox -->
-        <div class="row">
+        <div class="modalBox">
             <div class="column"><img src="img/foto1.png" alt="fotos" onclick="openModal();currentSlide(1)" class="hover-shadow"></div>
             <div class="column"><img src="img/foto2.png" alt="fotos" onclick="openModal();currentSlide(2)" class="hover-shadow"></div>
             <div class="column"><img src="img/foto3.png" alt="fotos" onclick="openModal();currentSlide(3)" class="hover-shadow"></div>
