--- a/contact.html
+++ b/contact.html
@@ -3,26 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>TEMPLATE</title>
+        <title>SD&eM</title>
         <link rel="icon" href="img/favicon.png">
         <link href="css/nav.min.css" rel="stylesheet">
-        <link href="css/styles.css" type="text/css" rel="stylesheet">    
-        <link href="css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        
+        <link href="css/styles.css" type="text/css" rel="stylesheet">       
     </head>
     <body>
         <!-- NAVIGATION SECTION-->
         <nav class="nav">
             <div class="container1">
                 <div class="logo">
-                <a href="index.html">SD$eM</a>
+                <a href="index.html">SD&eM</a>
                 </div>
                 <div id="mainListDiv" class="main_list">
                     <ul class="navlinks">
-                        <li><a href="about.html">ABOUT</a></li>
-                        <li><a href="profile.html">PROFILE</a></li>
-                        <li><a href="gallery.html">GALLERY</a></li>
-                        <li><a href="contact.html" style="color: rgb(197, 197, 197)">CONTACT</a></li>
+                        <li><a href="trains.html">TRAINS</a></li>
+                        <li><a href="drugs.html">DRUGS</a></li>
+                        <li><a href="music.html">MUSIC</a></li>
+                        <li><a href="contact.html"   style="color: rgb(197, 197, 197)">CONTACT</a></li>
                     </ul>
                 </div>
                 <span class="navTrigger">
