--- a/contact.html
+++ b/contact.html
@@ -35,32 +35,28 @@
             <section id="contact">
                 <div class="section-content">
                     <h1>CONTACT</h1>
-                    <div  class="section-headers">
+                    <div class="contact-section">
+                        <div class="container2">
+                            <form>
+                                <div class="column1">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="" placeholder="NAME">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" id="exampleInputEmail" placeholder="EMAIL">
+                                    </div>	
+                                    <div class="form-group">
+                                        <input type="tel" class="form-control" id="telephone" placeholder=" PHONE NUMBER">
+                                    </div>
+                                    <div class="form-group">
+                                        <textarea  class="form-control" id="description" placeholder="SAY SOMETHING"></textarea>
+                                    </div>
+                                    <div>
+                                    <button type="button" class="btn btn-default submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>SEND</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                        <div class="contact-section">
-                        <div class="container">
-                        <form>
-                            <div class="col-md-6 form-line">
-                                <div class="form-group">
-                                <input type="text" class="form-control" id="" placeholder="NAME">
-                                </div>
-                                <div class="form-group">
-                                <input type="email" class="form-control" id="exampleInputEmail" placeholder="EMAIL">
-                                </div>	
-                                <div class="form-group">
-                                <input type="tel" class="form-control" id="telephone" placeholder=" PHONE NUMBER">
-                                </div>
-                                </div>
-                                <div class="col-md-6">
-                                <div class="form-group">
-                                <textarea  class="form-control" id="description" placeholder="SAY SOMETHING"></textarea>
-                                </div>
-                                <div>
-                                <button type="button" class="btn btn-default submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>  SEND</button>
-                                </div>
-                                
-                            </div>
-                        </form>
                     </div>
                 </div>
             </section>
@@ -77,6 +73,4 @@
     <!--SCRIPT SECTION -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </html>
