--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
         <title>SD&eM</title>
         <link rel="icon" href="img/favicon.png">
         <link href="css/nav.min.css" rel="stylesheet">
-        <link href="css/styles.css" type="text/css" rel="stylesheet">       
+        <link href="css/styles.css" type="text/css" rel="stylesheet">  
+        <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">     
     </head>
     <body>
         <!-- NAVIGATION SECTION-->
